--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@angular/common": "~11.2.6",
     "@angular/compiler": "~11.2.6",
     "@angular/core": "~11.2.6",
-    "@angular/forms": "~11.2.6",
+    "@angular/flex-layout": "^11.0.0-beta.33",
+    "@angular/forms": "^11.2.7",
     "@angular/material": "^11.2.6",
     "@angular/platform-browser": "~11.2.6",
     "@angular/platform-browser-dynamic": "~11.2.6",
